added code to run on power systems

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,3 +18,22 @@ env:
     - DISTRO=alpine OCAML_VERSION=4.08.1
     - DISTRO=alpine OCAML_VERSION=4.09.1
     - DISTRO=alpine OCAML_VERSION=4.10.0
+#adding code to run on power systems
+    - DISTRO=alpine OCAML_VERSION=4.02.3
+      arch: ppc64le
+    - DISTRO=alpine OCAML_VERSION=4.03.0
+      arch: ppc64le
+    - DISTRO=alpine OCAML_VERSION=4.04.2
+      arch: ppc64le
+    - DISTRO=alpine OCAML_VERSION=4.05.0
+      arch: ppc64le
+    - DISTRO=alpine OCAML_VERSION=4.06.1
+      arch: ppc64le
+    - DISTRO=alpine OCAML_VERSION=4.07.1
+      arch: ppc64le
+    - DISTRO=alpine OCAML_VERSION=4.08.1
+      arch: ppc64le
+    - DISTRO=alpine OCAML_VERSION=4.09.1
+      arch: ppc64le
+    - DISTRO=alpine OCAML_VERSION=4.10.0
+      arch: ppc64le
